--- a/scss/header.scss
+++ b/scss/header.scss
@@ -64,6 +64,9 @@
       &:focus {
         outline: none;
       }
+      &:-internal-autofill-selected {
+        background-color: none !important;
+      }
       &::placeholder {
         color: white;
       }
