--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,11 +83,11 @@ ___________________________________________*/
     width: 90%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    height: 800px;
+    max-height: 800px;
     overflow: hidden;
     row-gap: 10px;
     column-gap: 10px;
-    transition: all 1s;
+    transition: max-height 0.5s;
     &.empty_wrapper{
       grid-template-columns: repeat(1, 1fr); 
     }
@@ -148,7 +148,7 @@ ___________________________________________*/
     }
 
     &__active {
-        height: calc((4 * 400px) + 50px);
+        max-height: calc(($cardsLength * 400px) + 50px);
     }
   }
 
@@ -158,7 +158,7 @@ ___________________________________________*/
     font-weight: 600;
     margin: 50px 0;
     &-show_more {
-      margin-right: 1%;
+      margin-right: 10px;
     }
     &__icon-wrapper {
       display: flex;
@@ -188,7 +188,7 @@ ___________________________________________*/
 ___________________________________________*/
 
 .aside {
-    width: 20%;
+    width: 35%;
     height: 100vh;
     background: #fff;
     position: fixed;
