--- a/scss/media.scss
+++ b/scss/media.scss
@@ -7,9 +7,12 @@
   grid-template-columns: repeat(4, 1fr);
  }
 }
-@media (max-width: 1075px) {
+@media (max-width: 1250px) {
   .s-header__logo-text-wrapper {
     display: none;
+  }
+  .s-header__nav-item-wrapper{
+    width: 20%;
   }
   .aside {
     width: 40%;
@@ -30,7 +33,7 @@
     font-size: 25px;
   }
 }
-@media (max-width: 795px) {
+@media (max-width: 875px) {
   .s-cards__item-wrapper {
     grid-template-columns: repeat(3, 1fr);
    }
@@ -38,7 +41,13 @@
     margin: 0 15px 0 15px;
   }
 }
-@media (max-width: 610px) {
+@media (max-width: 700px) {
+  .s-header__form{
+    width: 85%;
+  }
+  .aside {
+    width: 100%;
+  }
   .s-cards{
     padding: 0 0 20px 0;
     &__item-wrapper {
@@ -49,6 +58,15 @@
      }
      &__btn {
       width: 60%;
+    }
+    &__item-wrapper__item__wrapper-text {
+      text-align: center;
+      &__delivery-time {
+        text-align: center;
+      }
+      &__icon-wrapper {
+        justify-content: center;
+      }
     }
   } 
   .s-footer,
@@ -61,14 +79,11 @@
   .s-header__nav-item-wrapper {
     display: none;
   }
-  .s-header__form {
-    width: 100%;
-  }
   .footer-adapt {
     display: flex;
     background: linear-gradient(90deg, $pinkWB, #481173);
     width: 100vw;
-    height: 50px;
+    max-height: 50px;
     position: fixed;
     bottom: 0;
     &__wrap {
@@ -94,28 +109,14 @@
     }
   }
 }
-@media (max-width: 500px) {
-  .aside {
-    width: 100%;
-  }
-  .s-cards__item-wrapper__item__wrapper-text {
-    text-align: center;
-    &__delivery-time {
-      text-align: center;
-    }
-    &__icon-wrapper {
-      justify-content: center;
-    }
-  }
-}
 @media (max-width: 475px) {
+  .s-slider{
+    display: none;
+  }
   .s-cards__item-wrapper {
     grid-template-columns:  1fr;
    }
   .s-header {
     flex-wrap: nowrap;
-  }
-  .s-header__form {
-    width: 60%;
   }
 }
