--- a/scss/media.scss
+++ b/scss/media.scss
@@ -83,9 +83,9 @@
     display: flex;
     background: linear-gradient(90deg, $pinkWB, #481173);
     width: 100vw;
-    max-height: 50px;
+    max-height: 51px;
     position: fixed;
-    bottom: 0;
+    bottom: -1px;
     &__wrap {
       display: flex;
       @include flexCenter;
