--- a/scss/generalStyles.scss
+++ b/scss/generalStyles.scss
@@ -48,7 +48,7 @@ button {
 ul, li {
   padding: 0;
   margin: 0;
-  list-style: none;
+  // list-style: none;
   box-sizing: border-box;
 }
 /*! Container
