--- a/scss/modalWindow.scss
+++ b/scss/modalWindow.scss
@@ -10,133 +10,120 @@
   @include modalCenter;
   @include modalWindow;
   @include flexCenter;
-  border: 1px solid transparent;
   border-radius: 10px;
   &__title {
     font-weight: 600;
     font-size: 20px;
+    color: $pinkWB;
   }
   &__form {
     display: flex;
     flex-direction: column;
     @include flexCenter;
     width: 75%;
+    height: 50%;
     &__input {
       width: 100%;
       margin: 10px 0;
+      height: 30px;
+      border: 1px solid lightgray;
+      padding: 0 10px;
+      border-radius: 5px;
+      margin: 0 0 20px 0;
+      &:focus{
+        outline: none;
+      }
     }
     &__btn {
       width: 50%;
     }
   }
 }
-.modal-user {
-  display: none;
+.modal-user-header{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
-/*! Shoping cart
+/*! Modal Cart
 /*!_________________________________________________________________*/
-.modal-s-cart {
-  width: 70vw;
-  height: 70vh;
+.modal_cart {
+  width: 30vw;
   position: fixed;
   z-index: 2;
   @include modalCenter;
   @include modalWindow;
   @include flexCenter;
-  &__title {
-    @extend .modal-user__title;
+  border-radius: 10px;
+  &-title {
     font-size: 35px;
     height: 10%;
     padding: 15px 0;
+    text-align: center;
+    color: $pinkWB;
   }
-  &__content-wrapper {
+  &-content{
+    margin: 10px 0 0 0;
     width: 100%;
-    height: 80%;
-    &__row {
-      padding: 5px;
-      display: flex;
-      &:nth-child(2n) {
-        background-color: lightgrey;
-      }
-
-      &__number {
-        width: 10%;
-        display: flex;
-        @include flexCenter;
-        @include FontsCart;
-      }
-      &__name {
-        width: 80%;
-        @extend .modal-s-cart__content-wrapper__row__number;
-      }
-      &__del {
-        @extend .modal-s-cart__content-wrapper__row__number;
-      }
-    }
-  }
-  &__btn {
-    @extend .s-cards__btn;
-    margin: 15px;
-  }
-}
-
-.modal-s-cart {
-  display: none;
-}
-
-/*! Cart Detailed
-/*!_________________________________________________________________*/
-.modal-cart-det {
-  width: 70vw;
-  height: 70vh;
-  position: fixed;
-  z-index: 2;
-  background-color: white;
-  display: flex;
-  @include flexCenter;
-  @include modalCenter;
-  &__img-wrap {
-    width: 50%;
-    height: 100%;
-    &_img {
-      object-fit: contain;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    &_item{
       width: 100%;
-      height: 100%;
-    }
-  }
-  &__desc-wrap {
-    width: 50%;
-    height: 85%;
-    padding: 3%;
-    &__title {
-      @extend .modal-s-cart__title;
-    }
-    &__price {
-      font-size: 25px;
-      font-weight: 400;
+      display: flex;
+      justify-content: space-between;
       margin: 0 0 10px 0;
-    }
-    // &__icon-wrapper {
-    //   @extend .s-cards__item-wrapper__item__wrapper-text__svg-wrapper;
-    //   &__svg {
-    //     @extend.s-cards__item-wrapper__item__wrapper-text__svg-wrapper__svg;
-    //   }
-    //   &__rate {
-    //     @extend .s-cards__item-wrapper__item__wrapper-text__svg-wrapper__rate;
-    //   }
-    // }
-    &__btn {
-      @extend .s-cards__item-wrapper__item__btn;
-      margin-top: 15px;
-      &:hover {
-        color: $pinkWB;
-        background-color: white;
-      }
+        & td:not(:last-child) {
+          width: 35%;
+          text-align: center;
+        }
+        & td:last-child {
+          width: 20%;
+          text-align: center;
+        }
+  }
+    &_delete{
+      color: red;
     }
   }
 }
+.close-modal-window {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 5px;
+  width: 30px;
+  height: 30px;
+  &:hover {
+    outline: 1px solid red;
+    border-radius: 20%;
+    color: red;
 
-.modal-cart-det {
-  display: none;
+  }
+}
+
+table {
+  width: 100%;
+  padding:  0 20px;
+}
+thead tr {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  & th:not(:last-child) {
+          width: 35%;
+          text-align: center;
+        }
+  & th:last-child {
+          width: 20%;
+          text-align: center;
+        }
+}
+.welcome_wrapper{
+  text-align: center;
+}
+
+.userAuthorization_text{
+  color: #fff;
 }
